k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
    type: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      type: frontend
  template:
    metadata:
      labels:
        app: frontend
        type: frontend
    spec:
      containers:
      - name: frontend-container
        image: shimulmahmud/frontend:v1.0.1
        ports:
        - containerPort: 3000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
    type: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      type: backend
  template:
    metadata:
      labels:
        app: backend
        type: backend
    spec:
      containers:
      - name: backend-conatiner
        image: shimulmahmud/backend:v1.0.1
        ports:
        - containerPort: 5000
        volumeMounts:
          - mountPath: /app/logs/
            name: access-log-volume
            # subPath: access.log
      volumes:
        - name: access-log-volume
          persistentVolumeClaim:
            claimName: test-claim
